<resources>
    <string name="app_name">SettingsExample</string>

    <string name="font_size_desc_value">Font Size: %d</string>
    <string name="your_signature_desc_value">Your Signature: %s</string>
    <string name="def_reply_action_desc_value">Default Reply Action: %s</string>
    <string name="sync_email_periodically_desc_value">Sync email Periodically: %s</string>
    <string name="download_attachments_desc_value">Download incoming attachments: %s</string>

    <string name="settings_button">Settings</string>

    <!-- Preference Titles -->
    <string name="font_header">Font</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Font Preferences -->
    <string name="font_size_title">Font size</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>