<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/font_header"
        app:icon="@drawable/ic_baseline_font_download_24">

        <SeekBarPreference
            app:key="size"
            app:title="@string/font_size_title"
            app:defaultValue="14"
            android:max="50"
            app:min="10"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header"
        app:icon="@drawable/ic_baseline_message_24">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header"
        app:icon="@drawable/ic_baseline_sync_24">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>